Keep track of build arguments in provenance
